--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@greatsumini/react-facebook-login": "^3.3.0",
+    "@material-tailwind/react": "^1.2.4",
     "@react-oauth/google": "^0.5.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
