--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "emoji-picker-react": "^4.4.7",
     "flowbite": "^1.5.4",
     "flowbite-react": "^0.3.7",
+    "framer-motion": "^7.6.19",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
